* Moving all output related stuff to an output package * The creation of a list now displays the same infos as the listing of a list. * Introduction on an Outputter, where we'll put avery formatting stuff, and reuse between commands